--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcsh 'Science fiction'
 - !lcc 'PS'
 - !lcsh 'Space colonies -- Fiction'
+- GITenberg
 title: Four-Day Planet
 url: http://www.gutenberg.org/ebooks/19478
